--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="tela.css">
-    <script src="main.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <title>Consulta CEP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Minha página detectação de faces</title>
+  <script defer src="face-api.min.js"></script>
+  <script defer src="script.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      border: 1px;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    canvas {
+      position: absolute;
+    }
+  </style>
 </head>
-
 <body>
-
-    <h1 style="text-align:center">Pesquisador de CEP's</h1>
-
-    <div class="Organiza">
-        <div>
-            <input type="Pesquisa" id="PesquisaCEP" placeholder="Digite um CEP'S..." onload="validaCep()">
-
-        </div>
-        <button id="botao" onclick="validaCep()">
-            <i class="bi bi-cursor-fill"></i>
-        </button>
-    </div>
-    <div id="Cidade">
-    </div>
-
+  <video id="video" width="720" height="560" autoplay muted></video>
 </body>
-
 </html>
